# pixelart2tgs

./: .gitignore  LICENSE.txt  README.md  algo.txt  chain_generator.py  contour_generator.py  converter.py  converter_types.py  lottie_generator.py  lottie_types.py  main.py  optimized_converter.py  pyproject.toml  requirements.txt  shape_generator.py  templates.py
lottie_example/: example.json  json2tgs_converter.py
lottie_tests/: a.json
old_converter/: converter.py  main.py  templates.py
src/pixelart2tgs/: __main__.py  chain_generator.py  contour_generator.py  lottie_generator.py  shape_generator.py  templates.py
