[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pixelart2tgs"
version = "1.0.0"
authors = [
  { name="sliva0", email="sliva0mk@gmail.com" },
]
description = "Simple .gif to .tgs converter cli utility"
readme = "README.md"
license = "MIT License"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.22.4",
    "Pillow >= 9.1.1",
    "scipy >= 1.8.1"
]

[project.urls]
"Homepage" = "https://github.com/sliva0/pixelart2tgs"